<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/fab_margin"
            app:cardBackgroundColor="@color/primary">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:orientation="vertical"
                android:minHeight="350dp"
                android:padding="@dimen/fab_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/small"
                    android:text="In the beginning was"
                    android:textColor="@color/text_secondary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/h1"
                    android:text="@string/app_name"
                    android:textColor="@color/primary_light"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/small"
                    android:text="@string/search"
                    android:textColor="@color/text_secondary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/h1"
                    android:text="@string/matt77"
                    android:textColor="@color/primary_light"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/backgroud_primary_dark"
                        android:padding="@dimen/fab_margin"
                        android:hint="@string/seek_and_you_shall_find"
                        android:textColor="@color/primary_light"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:imeOptions="actionSearch"
                        android:textColorHint="@color/text_secondary"/>

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/luna_search"
                        style="@style/ButtonAccent"
                        android:padding="@dimen/fab_margin"
                        android:layout_marginStart="4dp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bookList"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="@dimen/fab_margin"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>