<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.MainActivity"
    android:background="@color/white">

    <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:direction="clockwise"
        app:dotColor="@color/accent"
        app:dotWidth="16dp"
        app:drawDot="true"
        app:enableProgressAnimation="true"
        app:progressBackgroundColor="@color/primary_light"
        app:progressBackgroundStrokeWidth="28dp"
        app:progressCap="round"
        app:progressColor="@color/accent"
        app:progressStrokeWidth="16dp"
        app:startAngle="270"
        app:textColor="@color/primary"
        app:textSize="0sp"
        app:fillBackground="false"
        app:gradientType="linear"
        app:gradientEndColor="@color/accent"
        android:id="@+id/circularProgress"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        />





    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/luna_blvrd"
            app:layout_constraintRight_toLeftOf="@id/textview_blvrd"
            app:layout_constraintBottom_toBottomOf="@id/textview_blvrd"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwb"
                android:keepScreenOn="true"
                style="@style/p"
                android:textColor="@color/dark_primary"/>



            <TextView
                android:id="@+id/textview_blvrd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blvrd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/primary"
                style="@style/h1"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/text_secondary"
                android:gravity="center"
                android:layout_gravity="bottom"
                style="@style/small"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>